--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-toc": "^8.0.1",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
